# ChangeLog for sys-fs/squashfs-tools
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header $

  29 Jan 2012; Martin Väth <martin@mvath.de>
  Remove old.

  31 Mar 2011; Martin Väth <martin@mvath.de>
  Bump 4.2 from tree.

  03 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  25 Sep 2010; Martin Väth <martin@mvath.de>
  Bump 4.1 from tree with new patch.

  23 Aug 2010; Martin Väth <martin@mvath.de>
  Bump EAPI.

  03 Jul 2010; Martin Väth <martin@mvath.de>
  Bump all versions to force upgrade.

  27 Apr 2010; Martin Väth <martin@mvath.de>
  Copy from the portage tree to add USE=progress-redirect
  Clear previous ChangeLog.